# os_labs

1/: CMakeLists.txt  ChildProcess.cpp  ParentProcess.cpp  file.txt
1/docs/: Logfile.CSV  report1.docx
1/src/: CMakeLists.txt  ChildProcess.cpp  ParentProcess.cpp  file.txt
2/docs/: Logfile.CSV  lab_work_2_v5.odt  report2.docx  report3.docx
2/src/: CMakeLists.txt  main.c
3/docs/: Logfile.CSV  report1.docx  report3.docx
3/src/: ChildProcess.cpp  ParentProcess.cpp  file.txt  test.txt
4/docs/: Logfile.CSV  OS_Lab_4_2024.odt  report4.docx
4/src/: CMakeLists.txt  comp.cpp  exec.cpp
4/src/contract1/: contract1.cpp
4/src/contract2/: contract2.cpp
5-7/: oslab5_7.sln
5-7/docs/: Logfile.CSV  report5-7.docx
5-7/node/: main.cpp
5-7/node/x64/Debug/: node.exe.recipe  node.ilk  node.vcxproj.FileListAbsolute.txt  vc143.idb
5-7/node/x64/Debug/node.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  node.write.1u.tlog
5-7/oslab5_7/: main.cpp  oslab5_7.vcxproj
5-7/oslab5_7/x64/Debug/: control.exe.recipe  control.ilk  oslab5_7.vcxproj.FileListAbsolute.txt  vc143.idb
5-7/oslab5_7/x64/Debug/control.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  control.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+2 more)
5-7/src/: CmakeLists.txt
5-7/src/nodes/: parent.cpp  worker.cpp
5-7/x64/Debug/: common.idb  common.lib
8/: report8.docx
course project/docs/: report_cp.docx
course project/src/: CMakeLists.txt  client.cpp  server.cpp
